--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cookie-session": "^2.0.0",
+    "bcryptjs": "^3.0.2",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
+    "cookie-session": "^2.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.0",
+    "csurf": "^1.11.0",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "mongoose": "^8.15.0",
+    "nodemailer": "^7.0.3",
     "nodemon": "^2.0.15",
-    "passport": "^0.5.2",
-    "passport-google-oauth20": "^2.0.0"
+    "passport": "^0.5.3",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.8.1",
+    "winston": "^3.17.0"
   }
 }
